Improved components logic. Styling

--- a/apps/workshop/.storybook/preview-head.html
+++ b/apps/workshop/.storybook/preview-head.html
@@ -1,3 +1,9 @@
+<link href="https://fonts.cdnfonts.com/css/inter" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Inter';
+  }
+</style>
 <script>
   window.global = window;
 </script>
